Add functionality to print most frequently occurring pairs and merge them

--- a/ps6.ipynb
+++ b/ps6.ipynb
@@ -937,12 +937,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "981685f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequently occurring pairs:\n",
+      "Pair (101, 32) occurs 20 times\n",
+      "Pair (240, 159) occurs 15 times\n",
+      "Pair (226, 128) occurs 12 times\n",
+      "Pair (105, 110) occurs 12 times\n",
+      "Pair (115, 32) occurs 10 times\n",
+      "Pair (32, 97) occurs 10 times\n",
+      "Pair (97, 110) occurs 10 times\n",
+      "Pair (32, 116) occurs 9 times\n",
+      "Pair (116, 104) occurs 8 times\n",
+      "Pair (159, 133) occurs 7 times\n"
+     ]
+    }
+   ],
    "source": [
-    "#pprint the most fequently occirng pairs \n"
+    "#pprint the most fequently occirng pairs \n",
+    "print(\"Most frequently occurring pairs:\")\n",
+    "for pair, count in list(sortedx.items())[:10]:\n",
+    "    print(f\"Pair {pair} occurs {count} times\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e3c45b5",
+   "metadata": {},
+   "source": [
+    "if ids[1] == pair[0] && ids[i+1 ] == pair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "94fa19cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 99, 9, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge_most_occuring_pair(ids: list[int], pair: tuple[int,int],idx:int) -> list[int]:\n",
+    "    new_id = []\n",
+    "\n",
+    "    i = 0\n",
+    "    while i < len(ids):\n",
+    "        if ids[i]== pair[0] and i+1 < len(ids) and ids[i+1]== pair[1]:\n",
+    "            new_id.append(idx)\n",
+    "            i += 2\n",
+    "        else:\n",
+    "            new_id.append(ids[i])\n",
+    "            i += 1\n",
+    "    return new_id\n",
+    "\n",
+    "print(merge_most_occuring_pair([5, 6, 6, 7, 9, 1], (6, 7), 99))\n",
+    "\n",
+    "\n"
    ]
   }
  ],
