--- a/ps6.ipynb
+++ b/ps6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "578dd58e",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "10a0e8f7",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "122"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "13856cd3",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "'z'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "8d0efdb7",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "1e5841a1",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "0f9f9076",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "fe7ac9e6",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "b'\\xef\\xbc\\xb5\\xef\\xbd\\x8e\\xef\\xbd\\x89\\xef\\xbd\\x83\\xef\\xbd\\x8f\\xef\\xbd\\x84\\xef\\xbd\\x85! \\xf0\\x9f\\x85\\xa4\\xf0\\x9f\\x85\\x9d\\xf0\\x9f\\x85\\x98\\xf0\\x9f\\x85\\x92\\xf0\\x9f\\x85\\x9e\\xf0\\x9f\\x85\\x93\\xf0\\x9f\\x85\\x94\\xe2\\x80\\xbd \\xf0\\x9f\\x87\\xba\\xe2\\x80\\x8c\\xf0\\x9f\\x87\\xb3\\xe2\\x80\\x8c\\xf0\\x9f\\x87\\xae\\xe2\\x80\\x8c\\xf0\\x9f\\x87\\xa8\\xe2\\x80\\x8c\\xf0\\x9f\\x87\\xb4\\xe2\\x80\\x8c\\xf0\\x9f\\x87\\xa9\\xe2\\x80\\x8c\\xf0\\x9f\\x87\\xaa! \\xf0\\x9f\\x98\\x84 The very name strikes fear and awe into the hearts of programmers worldwide. We all know we ought to \\xe2\\x80\\x9csupport Unicode\\xe2\\x80\\x9d in our software (whatever that means\\xe2\\x80\\x94like using wchar_t for all the strings, right?). But Unicode can be abstruse, and diving into the thousand-page Unicode Standard plus its dozens of supplementary annexes, reports, and notes can be more than a little intimidating. I don\\xe2\\x80\\x99t blame programmers for still finding the whole thing mysterious, even 30 years after Unicode\\xe2\\x80\\x99s inception.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "fb85562f",
    "metadata": {},
    "outputs": [
@@ -816,7 +816,7 @@
        " 46]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f5da3688",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "414c01c6",
    "metadata": {},
    "outputs": [],
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "8abff9af",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "981685f6",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "94fa19cd",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "43e9d604",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "d8752fdc",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "4e098310",
    "metadata": {},
    "outputs": [
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "8a136e1b",
    "metadata": {},
    "outputs": [
@@ -1139,6 +1139,147 @@
     "print(f\"ids length: {len(ids)}\")\n",
     "print(f\"compression ratio: {len(tokens) / len(ids):2f}X\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d04142c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: b'\\x00', 1: b'\\x01', 2: b'\\x02', 3: b'\\x03', 4: b'\\x04', 5: b'\\x05', 6: b'\\x06', 7: b'\\x07', 8: b'\\x08', 9: b'\\t', 10: b'\\n', 11: b'\\x0b', 12: b'\\x0c', 13: b'\\r', 14: b'\\x0e', 15: b'\\x0f', 16: b'\\x10', 17: b'\\x11', 18: b'\\x12', 19: b'\\x13', 20: b'\\x14', 21: b'\\x15', 22: b'\\x16', 23: b'\\x17', 24: b'\\x18', 25: b'\\x19', 26: b'\\x1a', 27: b'\\x1b', 28: b'\\x1c', 29: b'\\x1d', 30: b'\\x1e', 31: b'\\x1f', 32: b' ', 33: b'!', 34: b'\"', 35: b'#', 36: b'$', 37: b'%', 38: b'&', 39: b\"'\", 40: b'(', 41: b')', 42: b'*', 43: b'+', 44: b',', 45: b'-', 46: b'.', 47: b'/', 48: b'0', 49: b'1', 50: b'2', 51: b'3', 52: b'4', 53: b'5', 54: b'6', 55: b'7', 56: b'8', 57: b'9', 58: b':', 59: b';', 60: b'<', 61: b'=', 62: b'>', 63: b'?', 64: b'@', 65: b'A', 66: b'B', 67: b'C', 68: b'D', 69: b'E', 70: b'F', 71: b'G', 72: b'H', 73: b'I', 74: b'J', 75: b'K', 76: b'L', 77: b'M', 78: b'N', 79: b'O', 80: b'P', 81: b'Q', 82: b'R', 83: b'S', 84: b'T', 85: b'U', 86: b'V', 87: b'W', 88: b'X', 89: b'Y', 90: b'Z', 91: b'[', 92: b'\\\\', 93: b']', 94: b'^', 95: b'_', 96: b'`', 97: b'a', 98: b'b', 99: b'c', 100: b'd', 101: b'e', 102: b'f', 103: b'g', 104: b'h', 105: b'i', 106: b'j', 107: b'k', 108: b'l', 109: b'm', 110: b'n', 111: b'o', 112: b'p', 113: b'q', 114: b'r', 115: b's', 116: b't', 117: b'u', 118: b'v', 119: b'w', 120: b'x', 121: b'y', 122: b'z', 123: b'{', 124: b'|', 125: b'}', 126: b'~', 127: b'\\x7f', 128: b'\\x80', 129: b'\\x81', 130: b'\\x82', 131: b'\\x83', 132: b'\\x84', 133: b'\\x85', 134: b'\\x86', 135: b'\\x87', 136: b'\\x88', 137: b'\\x89', 138: b'\\x8a', 139: b'\\x8b', 140: b'\\x8c', 141: b'\\x8d', 142: b'\\x8e', 143: b'\\x8f', 144: b'\\x90', 145: b'\\x91', 146: b'\\x92', 147: b'\\x93', 148: b'\\x94', 149: b'\\x95', 150: b'\\x96', 151: b'\\x97', 152: b'\\x98', 153: b'\\x99', 154: b'\\x9a', 155: b'\\x9b', 156: b'\\x9c', 157: b'\\x9d', 158: b'\\x9e', 159: b'\\x9f', 160: b'\\xa0', 161: b'\\xa1', 162: b'\\xa2', 163: b'\\xa3', 164: b'\\xa4', 165: b'\\xa5', 166: b'\\xa6', 167: b'\\xa7', 168: b'\\xa8', 169: b'\\xa9', 170: b'\\xaa', 171: b'\\xab', 172: b'\\xac', 173: b'\\xad', 174: b'\\xae', 175: b'\\xaf', 176: b'\\xb0', 177: b'\\xb1', 178: b'\\xb2', 179: b'\\xb3', 180: b'\\xb4', 181: b'\\xb5', 182: b'\\xb6', 183: b'\\xb7', 184: b'\\xb8', 185: b'\\xb9', 186: b'\\xba', 187: b'\\xbb', 188: b'\\xbc', 189: b'\\xbd', 190: b'\\xbe', 191: b'\\xbf', 192: b'\\xc0', 193: b'\\xc1', 194: b'\\xc2', 195: b'\\xc3', 196: b'\\xc4', 197: b'\\xc5', 198: b'\\xc6', 199: b'\\xc7', 200: b'\\xc8', 201: b'\\xc9', 202: b'\\xca', 203: b'\\xcb', 204: b'\\xcc', 205: b'\\xcd', 206: b'\\xce', 207: b'\\xcf', 208: b'\\xd0', 209: b'\\xd1', 210: b'\\xd2', 211: b'\\xd3', 212: b'\\xd4', 213: b'\\xd5', 214: b'\\xd6', 215: b'\\xd7', 216: b'\\xd8', 217: b'\\xd9', 218: b'\\xda', 219: b'\\xdb', 220: b'\\xdc', 221: b'\\xdd', 222: b'\\xde', 223: b'\\xdf', 224: b'\\xe0', 225: b'\\xe1', 226: b'\\xe2', 227: b'\\xe3', 228: b'\\xe4', 229: b'\\xe5', 230: b'\\xe6', 231: b'\\xe7', 232: b'\\xe8', 233: b'\\xe9', 234: b'\\xea', 235: b'\\xeb', 236: b'\\xec', 237: b'\\xed', 238: b'\\xee', 239: b'\\xef', 240: b'\\xf0', 241: b'\\xf1', 242: b'\\xf2', 243: b'\\xf3', 244: b'\\xf4', 245: b'\\xf5', 246: b'\\xf6', 247: b'\\xf7', 248: b'\\xf8', 249: b'\\xf9', 250: b'\\xfa', 251: b'\\xfb', 252: b'\\xfc', 253: b'\\xfd', 254: b'\\xfe', 255: b'\\xff', 256: b'e ', 257: b'\\xf0\\x9f', 258: b'\\xe2\\x80', 259: b'in', 260: b's ', 261: b' a', 262: b'an', 263: b' t', 264: b'th', 265: b'\\x9f\\x85', 266: b'\\x9f\\x87', 267: b'ar', 268: b'\\xef\\xbd', 269: b'\\x80\\x8c', 270: b'\\x8c\\xf0', 271: b'he', 272: b'er', 273: b'me', 274: b'r '}\n"
+     ]
+    }
+   ],
+   "source": [
+    "voacb = {idx: bytes([idx]) for idx in range(256)}\n",
+    "\n",
+    "for pair, new_idx in meregs.items():\n",
+    "    voacb[new_idx] = bytes([pair[0]]) + bytes([pair[1]])\n",
+    "\n",
+    "print(voacb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73813023",
+   "metadata": {},
+   "source": [
+    "so what we have done till now is .. first we learbed to change the inidvidual character into unicode and unicode into character and the ty\n",
+    "type of unicode we are following is UTF-8 that is it has 3 byte to store all different types of symbols \n",
+    "then waht we did is we implemented BPE in which we splited every character and changed them to utf-8 ecoding and then we created a method that will give us pair of neighbour token and how often they occur together then we merged the most frequendt token together and created a merged list and afterwards we expanded the vocabulary \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "be2dad8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#decode funnction\n",
+    "def decode(ids: list[int]):\n",
+    "    text = \"\"\n",
+    "    for i in ids:\n",
+    "        text += chr(i)\n",
+    "    return text\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "dfac3f97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello wĎld!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decode([104, 101, 108, 108, 111, 32, 119, 270, 108, 100, 33]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ea928cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encode(text: str):\n",
+    "    tokens = list(text.encode(\"utf-8\"))\n",
+    "    while len(tokens) >= 2:\n",
+    "        l = []\n",
+    "        for i , j in zip(tokens,tokens[1:]):\n",
+    "            if((i,j) in meregs):\n",
+    "                l.append(meregs[(i,j)])\n",
+    "              \n",
+    "            else:\n",
+    "                l.append(i)\n",
+    "\n",
+    "        break\n",
+    "          \n",
+    "\n",
+    "        \n",
+    "    tokens = l \n",
+    "    \n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32e5f4d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encode(text: str):\n",
+    "    tokens = list(text.encode(\"utf-8\"))\n",
+    "    while len(tokens) >= 2:\n",
+    "        l = []\n",
+    "        i = 0\n",
+    "        while i < len(tokens):\n",
+    "            if i + 1 < len(tokens) and (tokens[i], tokens[i + 1]) in meregs:\n",
+    "                l.append(meregs[(tokens[i], tokens[i + 1])])\n",
+    "                i += 2\n",
+    "            else:\n",
+    "                l.append(tokens[i])\n",
+    "                i += 1\n",
+    "        tokens = l\n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "50b3974e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[271, 101, 108, 108, 111, 32, 119, 111, 114, 108, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(encode(\"hello world!\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a8a499d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
